infrastructure/argocd-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    tailscale.com/tags: tag:k8s
    tailscale.com/https: "true"
    tailscale.com/http-redirect: "true"
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - argocd
  rules:
  - host: argocd
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
